force-app/main/default/objects/Automated_Group_Membership_Config__mdt/Automated_Group_Membership_Config__mdt.object-meta.xml
<CustomObject>
    <label>Automated Group Membership Config</label>
    <pluralLabel>Automated Group Membership Configs</pluralLabel>
</CustomObject>