force-app/main/default/objects/Automated_Group_Membership_Config__mdt/fields/Group_Names__c.field-meta.xml
<CustomField>
    <fullName>Group_Names__c</fullName>
    <inlineHelpText>Give a list Group Names separated by comma</inlineHelpText>
    <label>Group Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>