force-app/main/default/objects/Automated_Group_Membership_Config__mdt/fields/Notification_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Notification_Frequency__c</fullName>
    <label>Notification Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Every Post</fullName>
                <default>true</default>
                <label>Every Post</label>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>