force-app/main/default/objects/Automated_Group_Membership_Config__mdt/fields/Remove_User_If_Not_Meeting_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Remove_User_If_Not_Meeting_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this flag if you want to remove the user from the group not meeting the criteria</inlineHelpText>
    <label>Remove User If Not Meeting Criteria</label>
    <type>Checkbox</type>
</CustomField>