force-app/main/default/objects/Automated_Group_Membership_Config__mdt/fields/Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>Where_Clause__c</fullName>
    <description>Enter a valid WHERE clause that will be added to &quot;SELECT Id FROM User WHERE IsActive = true&quot;</description>
    <inlineHelpText>Enter a valid WHERE clause that will be added to &quot;SELECT Id FROM User WHERE IsActive = true&quot;</inlineHelpText>
    <label>Where Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>