force-app/main/default/objects/Automated_Group_Membership_Config__mdt/validationRules/Ensure_Group_Names_are_comma_separated.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Group_Names_are_comma_separated</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Group_Names__c, &quot;^[a-zA-Z0-9_\\s\\-\\.\\&apos;]+(\\,[a-zA-Z0-9_\\s\\-\\.\\&apos;]+)*$&quot;)) || ISBLANK(Group_Names__c)</errorConditionFormula>
    <errorDisplayField>Group_Names__c</errorDisplayField>
    <errorMessage>Please ensure multiple group names are comma separated</errorMessage>
</ValidationRule>